# hyperspectral-image-road-segmentation

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
hyperspectral_image_road_segmentation/: __init__.py  config.py  dataset.py  features.py  plots.py
hyperspectral_image_road_segmentation/modeling/: predict.py  train.py  train_baselines.py  train_unet.py
models/: baseline_test_idx.npy  sgd_classifier.pkl  test_idx.npy  unet.py
notebooks/: plots.ipynb
reports/figures/: metrics.npz  rf_metrics.npz  sgd_metrics.npz  train_loss.npy  unet_metrics.npz  val_loss.npy
