[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "hyperspectral_image_road_segmentation"
version = "0.0.1"
description = "The goal of this project is to train a machine learning model for road segmentation using the hyperspectral images and masks from the HSI Road data set (https://github.com/NUST-Machine-Intelligence-Laboratory/hsi_road)."
authors = [
  { name = "Josh Penaojas, Emmanuel Sanchez, Michael Guerrero" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["hyperspectral_image_road_segmentation"]
include = ["pyproject.toml", "hyperspectral_image_road_segmentation/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["hyperspectral_image_road_segmentation"]
force-sort-within-sections = true

